# HyperPyText

./: .gitignore  README.md  __init__.py  create-HyperPy-app.py  package_boilerplate.py  pyproject.toml  requirements.txt  rules.md  setup.py
.cursor/rules/: prd.mdc
hyperpytext/: __init__.py  __main__.py
hyperpytext/templates/: api.yaml  app.yaml  db.yaml  db_app_example.yaml  db_auth.yaml  db_primary.yaml  db_primary_example.yaml  db_sqlalchemy.yaml  electron.yaml  env.yaml  gitignore.yaml  index.yaml  index_template.yaml  init.yaml  input_css_template.yaml  install_env.yaml  pyproject.yaml  readme.yaml  requirements.yaml  routes_auth.yaml  routes_schemas.yaml  schemas.yaml  schemas_piccolo.yaml  schemas_sqlalchemy.yaml  tables.yaml  tailwind_config.yaml  tailwind_npm.yaml  utils.yaml  uvicorn.yaml
hyperpytext/templates/react/client/: globals.css.yaml  (+2 more)
hyperpytext/templates/vanilla/: db_primary.yaml  db_primary_example.yaml  gitignore.yaml  index.yaml  init.yaml  input_css.yaml  pyproject.yaml  tailwind_config.yaml  uvicorn.yaml
hyperpytext/utils/: npm_utils.py
server/: run_server.py
src/hyperpytext/: __init__.py
src/hyperpytext/templates/: db_cache.yaml  env.yaml
src/hyperpytext/utils/: bun_utils.py  npm_electron_utils.py  npm_shadcnui_utils.py  npm_tailwind_utils.py  npm_utils.py  npm_vite_utils.py  poetry_utils.py  templates_utils.py  uv_utils.py
templates/: api_templates.yaml  app.yaml  gitignore_template.yaml  init_template.yaml
utils/: npm_electron_utils.py  npm_shadcnui_utils.py  npm_tailwind_utils.py  npm_utils.py  npm_vite_utils.py  poetry_utils.py
(+57 files in other folders)
