[tool.poetry]
name = "hyperpytext"
version = "0.1.0"
description = "A modern Python web application boilerplate"
authors = ["Santiago Minolli"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
