[project]
name = "hyperpytext"
version = "0.1.0"
description = "A tool to create web applications"
readme = "README.md"
authors = [{ name = "minollisantiago", email = "minollisantiago@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["click>=8.1.3", "pyyaml>=6.0"]

[project.scripts]
create-hyperpy-app = "hyperpytext:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hyperpytext"]

[tool.hatch.build]
include = ["src/hyperpytext/templates/**/*.yaml"]
